--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit">Search</button>
+    </form>
+    <div class="gallery">
+    </div>
+    <button type="button" class="load-more">Load more</button>
 
     <script src="index.js"></script>
   </body>
