update and add video search

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,14 @@
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">Search</button>
     </form>
+    <form class="search-form" id="video-search-form">
+      <input type="text" name="videoSearchQuery" autocomplete="off" placeholder="Search videos..." />
+      <button type="submit">Search</button>
+    </form>
     <div class="gallery">
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more">Load more Images</button>
+    <button type="button" class="load-more-video">Load more Videos</button>
 
     <script src="index.js"></script>
   </body>
